[gd_scene load_steps=7 format=2]

[ext_resource path="res://Options.gd" type="Script" id=1]
[ext_resource path="res://First_Job_24.tres" type="DynamicFont" id=2]
[ext_resource path="res://FirstJobFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://return_to_title.gd" type="Script" id=4]
[ext_resource path="res://media-afc-toddsonkin-afc1985001_afs05142a2.mp3" type="AudioStream" id=5]
[ext_resource path="res://background.png" type="Texture" id=6]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -597.414, -113.419 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_left = 1.49829
margin_right = 1281.5
margin_bottom = 720.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Label" parent="."]
margin_left = 120.0
margin_top = 69.5874
margin_right = 1160.0
margin_bottom = 208.587
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Options
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main_Volume" type="Label" parent="."]
margin_left = 160.0
margin_top = 240.0
margin_right = 328.0
margin_bottom = 295.0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "Main Volume
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main_Slide" type="HSlider" parent="Main_Volume"]
margin_top = 30.0
margin_right = 200.0
margin_bottom = 46.0
min_value = -60.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effects_Volume" type="Label" parent="."]
margin_left = 160.0
margin_top = 300.0
margin_right = 380.0
margin_bottom = 384.0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "
Effects Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effects_Slide" type="HSlider" parent="Effects_Volume"]
margin_top = 59.0
margin_right = 200.0
margin_bottom = 75.0
min_value = -60.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGM" type="Label" parent="."]
margin_left = 160.0
margin_top = 400.0
margin_right = 214.0
margin_bottom = 455.0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "
BGM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGM_Slide" type="HSlider" parent="BGM"]
margin_top = 59.0
margin_right = 200.0
margin_bottom = 75.0
min_value = -60.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 600.0
margin_right = 1160.0
margin_bottom = 632.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done_Button" type="Button" parent="HBoxContainer"]
margin_left = 884.0
margin_right = 960.0
margin_bottom = 32.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = "Done"
script = ExtResource( 4 )

[node name="Test_Button" type="Button" parent="HBoxContainer"]
margin_left = 964.0
margin_right = 1040.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HBoxContainer/Test_Button"]
stream = ExtResource( 5 )
bus = "BGM"

[connection signal="value_changed" from="Main_Volume/Main_Slide" to="." method="_on_Main_Slide_value_changed"]
[connection signal="value_changed" from="BGM/BGM_Slide" to="." method="_on_BGM_Slide_value_changed"]
[connection signal="pressed" from="HBoxContainer/Done_Button" to="HBoxContainer/Done_Button" method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/Test_Button" to="." method="_on_Test_Button_pressed"]
